--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	@fileoverview: The html structure for package testing.
 	@author: Obrymec - obrymecsprinces@gmail.com
 	@created: 2023-10-06
-	@updated: 2023-10-07
+	@updated: 2023-10-12
 	@file: index.html
 	@version: 0.0.1
 -->
@@ -11,7 +11,7 @@
 <!--Swipe events manager-->
 <!Doctype html>
 	<!--Structure-->
-	<html lang = "fr">
+	<html lang = "en">
 		<!--Header-->
 		<head>
 			<!--Encoding: "UTF-8"-->
@@ -84,17 +84,28 @@
 			<!--Global content-->
 			<main class = "content">
         <!--Top card-->
-        <div class = "top-card active">
+        <div
+          class = "top-card active"
+          name = "Top card"
+        >
           <span>Swipe me !</span>
         </div>
         <!--Bottom card-->
-        <div class = "bottom-card">
+        <div
+          class = "bottom-card"
+          name = "Bottom card"
+        >
           <span>Swipe me !</span>
         </div>
+        <!--Free swipe control-->
+        <button>
+          Destroy event effects
+        </button>
       </main>
 			<!--Test-->
-      <script type = "module">
-        
-      </script>
+      <script
+        src = "./index.test.js"
+        type = "module"
+      ></script>
 		</body>
 	</html>
