--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	@fileoverview: The html structure for package testing.
 	@author: Obrymec - obrymecsprinces@gmail.com
 	@created: 2023-10-06
-	@updated: 2023-10-12
+	@updated: 2023-10-13
 	@file: index.html
 	@version: 0.0.1
 -->
@@ -68,7 +68,7 @@
         body {
           font-family: Arial;
           user-select: none;
-          font-size: 18px;
+          font-size: 16px;
           color: white;
         }
         /* Cards */
@@ -76,8 +76,8 @@
         div.top-card {
           border: 3px solid transparent;
           background-color: red;
-          height: 180px;
-          width: 180px;
+          height: 160px;
+          width: 160px;
         }
         /* Active card */
         div.active {
@@ -105,6 +105,16 @@
         button:hover {
           background-color: skyblue;
         }
+        /* Info */
+        div.info {
+          font-weight: bolder;
+          text-align: center;
+          color: #646464;
+          position: fixed;
+          bottom: 20px;
+          right: 20px;
+          left: 20px;
+        }
       </style>
 		</head>
 		<!--Global container-->
@@ -130,6 +140,12 @@
           Destroy event effects
         </button>
       </main>
+      <!--Info-->
+      <div class = "info">
+        It's recommended to open the
+        website from your mobile
+        phone to get a better result.
+      </div>
 			<!--Test-->
       <script
         src = "./index.test.js"
