--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!--
-	@project: SwipeEventsManager - https://github.com/obrymec/swipe_events_manager
+	@project: SwipeEventsManager - https://obrymec.github.io/swipe_events_manager
 	@fileoverview: The html structure for package testing.
 	@author: Obrymec - obrymecsprinces@gmail.com
 	@created: 2023-10-06
-	@updated: 2023-10-14
+	@updated: 2023-10-16
 	@file: index.html
 	@version: 0.0.2
 -->
