--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	@fileoverview: The html structure for package testing.
 	@author: Obrymec - obrymecsprinces@gmail.com
 	@created: 2023-10-06
-	@updated: 2023-10-16
+	@updated: 2023-12-13
 	@file: index.html
 	@version: 0.0.2
 -->
@@ -35,6 +35,60 @@
         type = "image/ico"
         rel = "icon"
       />
+      <!--Meta configurations-->
+			<meta name = "twitter:image:alt" content = "The demonstration page."/>
+			<meta name = "tweetmeme-title" content = "The demonstration page"/>
+			<meta property = "og:site_name" content = "Swipe Events Manager"/>
+			<meta name = "twitter:title" content = "The demonstration page"/>
+			<meta property = "og:title" content = "The demonstration page"/>
+			<meta property = "og:type" content = "article"/>
+			<meta property = "og:local" content = "en_US"/>
+			<meta
+				content = "https://obrymec.github.io/swipe_events_manager/render/render-1.png"
+				name = "twitter:image"
+			/>
+			<meta
+				content = "https://obrymec.github.io/swipe_events_manager/render/render-1.png"
+				property = "og:image"
+			/>
+			<meta
+				content = "https://obrymec.github.io/swipe_events_manager/"
+				property = "og:url"
+			/>
+			<meta
+				content = "https://obrymec.github.io/swipe_events_manager/"
+				name = "twitter:card"
+			/>
+			<meta
+				name = "twitter:description"
+				content = "
+          This Node Package Manager (NPM) is a
+          front-end library for managing touch
+          screen events on mobile devices. It
+          provides a support for Javascript
+          and Typescript.
+				"
+			/>
+			<meta
+				property = "og:description"
+				content = "
+          This Node Package Manager (NPM) is a
+          front-end library for managing touch
+          screen events on mobile devices. It
+          provides a support for Javascript
+          and Typescript.
+				"
+			/>
+			<meta
+				name = "description"
+				content = "
+          This Node Package Manager (NPM) is a
+          front-end library for managing touch
+          screen events on mobile devices. It
+          provides a support for Javascript
+          and Typescript.
+				"
+			/>
       <!--Stylesheets-->
       <style
         type = "text/css"
